source/error/20200002/23_error.txt
/home/yenoh/term_project_2/source/STD_DIR/20200002/23.c: In function ‘main’:
/home/yenoh/term_project_2/source/STD_DIR/20200002/23.c:11:22: error: expected ‘;’ before ‘char’
   11 |         char buf[128]
      |                      ^
      |                      ;
   12 |         char pattern[4] = "bcd";
      |         ~~~~          
/home/yenoh/term_project_2/source/STD_DIR/20200002/23.c:13:20: error: ‘buf’ undeclared (first use in this function)
   13 |         char *pos1=buf, *pos2=buf;
      |                    ^~~
/home/yenoh/term_project_2/source/STD_DIR/20200002/23.c:13:20: note: each undeclared identifier is reported only once for each function it appears in
